compiler/ori_macros/tests/ui/fail/not_a_struct.stderr
error: Diagnostic derive only supports structs
 --> tests/ui/fail/not_a_struct.rs:5:10
  |
5 | #[derive(Diagnostic)]
  |          ^^^^^^^^^^
